--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,8 @@
-h1 {
+* {
   font-family: Helvetica;
+}
+
+h1 {
   font-size: 100px;
   font-weight: bold;
   color: khaki;
@@ -8,14 +11,12 @@ h1 {
 }
 
 h2 {
-  font-family: Helvetica;
   font-size: 32px;
   font-weight: bold;
   color: White;
 }
 
 .price {
-  font-family: Helvetica;
   font-weight: bold;
   color: blue;
 }
